Completion of several features. Ability to search for filtered queries, addition of a banner, slight modification of search button for decorative purposes.

--- a/next_try/src/stylesheets/itembox.css
+++ b/next_try/src/stylesheets/itembox.css
@@ -37,6 +37,18 @@
   max-height: 340px;
 }
 
+.banner {
+  background: rgb(86, 216, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(86, 216, 255, 1) 5%,
+    rgba(61, 110, 122, 1) 100%
+  );
+
+  color: rgba(86, 216, 255, 1);
+  display: block;
+}
+
 .center {
   position: absolute;
   left: 46.5%;
