Completion of first version of program. Program ready for cleanup.

--- a/next_try/src/App.css
+++ b/next_try/src/App.css
@@ -19,8 +19,9 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#hehe {
+  background-color: #d5f5fa;
+  color: white;
 }
 
 @keyframes App-logo-spin {
